manifest/production/namespaces/hello-java/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
spec:
  ingressClassName: nginx
  rules:
    - host: fleet.enigma-trainer.space
      http:
        paths:
          - path: /api/java-greeting/(.*)
            pathType: Prefix
            backend:
              service:
                name: java-service
                port:
                  number: 8181
